@@ -1,3 +1,4 @@
+* Allow combining authentication methods together
 * Add context to export CSV route
 
 Version 5.6.0 - 2020-05-04
